force-app/main/default/objects/Opportunity/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Opportunity Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>