force-app/main/default/objects/Opportunity/fields/Active_Quotes_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Quotes_Count__c</fullName>
    <label>Active Quotes Count</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>notEqual</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>notEqual</operation>
        <value>Void</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>