force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>Quote MRC annualized. Formula: Quote_MRC__c * 12. Used for ARR/ACV reporting. Read-only.</description>
    <formula>Quote_MRC__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualized MRC from the linked quote. Auto-calculated. Used for revenue run-rate and ARR reporting.</inlineHelpText>
    <label>Annual Contract Value (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>