force-app/main/default/objects/Opportunity/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <defaultValue>&quot;Per GTC&quot;</defaultValue>
    <inlineHelpText>Put Per GTC or the final negotiated %</inlineHelpText>
    <label>API %</label>
    <length>50</length>
    <type>Text</type>
</CustomField>