force-app/main/default/objects/Opportunity/fields/Assigned_Space_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Space_ID__c</fullName>
    <description>Space ID(s) assigned by the capacity manager at quote time. Populated before order confirmation. Visible on Opp to confirm physical capacity is reserved before deal closes.</description>
    <inlineHelpText>Space ID assigned by Capacity Management. Format: site code + hall + zone (e.g. SG01-H2-A12). Confirm with Ops before moving to Stage 5.</inlineHelpText>
    <label>Assigned Space ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>