force-app/main/default/objects/Opportunity/fields/Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount__c</fullName>
    <description>Defaults to MRC__c. Manual override supported. Requires Booking_Override_Reason__c when overridden.</description>
    <inlineHelpText>MRC value counted toward sales bookings quota. Defaults to MRC; override requires a reason. For change orders, this is the net incremental MRC value.</inlineHelpText>
    <label>Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>