force-app/main/default/objects/Opportunity/fields/Booking_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Booking_Bucket__c</fullName>
    <description>Auto-set based on Type and MRC direction. Bookings, Price Increase, Contracted Price Increase count toward quota.</description>
    <inlineHelpText>Revenue category for this deal. Auto-set based on deal type and MRC direction. Bookings, Price Increase, and Contracted Price Increase count toward quota.</inlineHelpText>
    <label>Booking Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
                <default>true</default>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Price Decrease</fullName>
            </value>
            <value>
                <fullName>Contracted API</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Comp Only</fullName>
            </value>
            <value>
                <fullName>Open Term</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>