force-app/main/default/objects/Opportunity/fields/Booking_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Booking_Override_Reason__c</fullName>
    <description>Required when Booking_Amount__c manually overridden or when Rev Ops closes to Won without a confirmed Order.</description>
    <inlineHelpText>Required when Booking Amount is manually changed from the MRC default, or when Rev Ops closes an opportunity to Won without a confirmed order.</inlineHelpText>
    <label>Booking Override Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>