force-app/main/default/objects/Opportunity/fields/Cabinets_Required__c.field-meta.xml
<CustomField>
    <fullName>Cabinets_Required__c</fullName>
    <description>Required for non-Platform colocation deals.</description>
    <inlineHelpText>Total number of colocation cabinets the customer requires. Required for non-Platform (non-hyperscaler) colocation deals.</inlineHelpText>
    <label>Oppt Cab</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>