force-app/main/default/objects/Opportunity/fields/Capacity_Cabinets__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Cabinets__c</fullName>
    <label>Oppt kVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>