force-app/main/default/objects/Opportunity/fields/Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Capacity_kW__c</fullName>
    <label>Capacity (kW)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>