force-app/main/default/objects/Opportunity/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Resale and via Indonet deals: the end-customer Account.</description>
    <inlineHelpText>For Resale or via Indonet deals, link to the end-customer account that will use the services (not the reseller who signs the contract).</inlineHelpText>
    <label>End User Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>End_Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Channel Partner / End User Customer)</relationshipLabel>
    <relationshipName>Channel_Partner_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>