force-app/main/default/objects/Opportunity/fields/Close_Date_Slip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Slip_Reason__c</fullName>
    <description>Required when CloseDate moves more than 30 days from the previous value. Feeds the Close Date Slip report used by sales managers to identify at-risk deals and sandbagging.</description>
    <inlineHelpText>Why is the close date moving? Select the primary reason. This is required when the date slips by more than 30 days.</inlineHelpText>
    <label>Close Date Slip Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Delay — Decision</fullName>
            </value>
            <value>
                <fullName>Customer Delay — Budget</fullName>
            </value>
            <value>
                <fullName>Customer Delay — Legal</fullName>
            </value>
            <value>
                <fullName>Negotiation Extended</fullName>
            </value>
            <value>
                <fullName>Capacity Not Available</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Internal Resource Constraint</fullName>
            </value>
            <value>
                <fullName>Competitive Evaluation Extended</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>