force-app/main/default/objects/Opportunity/fields/Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date__c</fullName>
    <description>Auto-stamped date when the opportunity is marked as Lost. Set by the Mark as Lost screen flow. Not editable by users.</description>
    <inlineHelpText>Date this opportunity was marked as Lost. Populated automatically by the Mark as Lost action.</inlineHelpText>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>