force-app/main/default/objects/Opportunity/fields/Closed_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Closed_Quarter__c</fullName>
    <description>For report and dashboard</description>
    <formula>TEXT(YEAR(CloseDate)) &amp; &quot; Q&quot; &amp; TEXT(CEILING(MONTH(CloseDate)/3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Quarter</label>
    <type>Text</type>
</CustomField>