force-app/main/default/objects/Opportunity/fields/Commission_Payout_Method__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payout_Method__c</fullName>
    <description>Phase 1 data capture only.</description>
    <inlineHelpText>How commission is paid out for this deal. Used for commissions reporting and Rev Ops calculations.</inlineHelpText>
    <label>Commission Payout Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amortise</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Back-End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>