force-app/main/default/objects/Opportunity/fields/Commission_Pct__c.field-meta.xml
<CustomField>
    <fullName>Commission_Pct__c</fullName>
    <label>Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>