force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Required when Loss_Reason__c = Competitor Decision.</description>
    <inlineHelpText>Required when Loss Reason is Competitor Decision. Select the competitor that won this deal to track competitive displacement trends.</inlineHelpText>
    <label>Competitor Won</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>NTT</fullName>
            </value>
            <value>
                <fullName>Singtel</fullName>
            </value>
            <value>
                <fullName>STT</fullName>
            </value>
            <value>
                <fullName>AirTrunk</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>