force-app/main/default/objects/Opportunity/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary competitor in this deal. Must be an Account with RecordType = Competitor.</description>
    <inlineHelpText>Which company is the customer also evaluating? Link an existing Competitor account or create a new one using the Log Deal Info button.</inlineHelpText>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competing_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>