force-app/main/default/objects/Opportunity/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <description>Contract duration in months. Minimum 12 months. Drives TCV = MRC × Contract_Term_Months__c.</description>
    <inlineHelpText>Length of the service contract in months. Minimum 12 months. Drives TCV calculation (MRC multiplied by term). Must match the SOF before binding the quote.</inlineHelpText>
    <label>Contract Term (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>