force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <inlineHelpText>Classifies the deal as Platform (hyperscaler) or Country (retail/enterprise). Inherited from the lead on conversion. Drives pipeline segmentation.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>