force-app/main/default/objects/Opportunity/fields/Days_in_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Stage__c</fullName>
    <formula>IF(ISBLANK(LastStageChangeDate),
   TODAY() - DATEVALUE(CreatedDate) + 1,
   TODAY() - DATEVALUE(LastStageChangeDate) + 1)</formula>
    <label>Days in Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>