force-app/main/default/objects/Opportunity/fields/DE_Entity__c.field-meta.xml
<CustomField>
    <fullName>DE_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Digital Edge legal entity contracting with this customer for this deal. Lookup to an Account record with RecordType = DE Entity. Replaces the Account-level DE_Subsidiary__c picklist so one Account can deal with multiple DE entities across Opportunities.</description>
    <inlineHelpText>Select the Digital Edge legal entity responsible for this deal (e.g. DE JP KK for Japan, DE SG Pte Ltd for Singapore). Set per Opportunity - one customer can have different contracting entities across deals.</inlineHelpText>
    <label>DE Subsidiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Contracting Entity)</relationshipLabel>
    <relationshipName>Contracting_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>