force-app/main/default/objects/Opportunity/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>More granular than Opportunity Type. New Logo = first confirmed Order on this Account.</description>
    <inlineHelpText>Granular classification of the deal&apos;s revenue motion. New Logo = first confirmed order for this account. Drives booking bucket and quota attribution.</inlineHelpText>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Non Colo</fullName>
            </value>
            <value>
                <fullName>Novation</fullName>
            </value>
            <value>
                <fullName>NRC only</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Power only</fullName>
            </value>
            <value>
                <fullName>PPI</fullName>
            </value>
            <value>
                <fullName>Renewal PD</fullName>
            </value>
            <value>
                <fullName>Renewal PI</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>RoFR</fullName>
            </value>
            <value>
                <fullName>Space &amp; Power</fullName>
            </value>
            <value>
                <fullName>Space only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>