force-app/main/default/objects/Opportunity/fields/Decision_Criteria_Options__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Options__c</fullName>
    <description>Multi-select checklist of criteria the client uses to judge vendors. Stored semi-colon separated.</description>
    <label>Decision Criteria - Key Factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price / Commercial Terms</fullName>
            </value>
            <value>
                <fullName>Technical Fit</fullName>
            </value>
            <value>
                <fullName>Vendor Stability</fullName>
            </value>
            <value>
                <fullName>Implementation Timeline</fullName>
            </value>
            <value>
                <fullName>References / Track Record</fullName>
            </value>
            <value>
                <fullName>Compliance &amp; Security</fullName>
            </value>
            <value>
                <fullName>Support Model</fullName>
            </value>
            <value>
                <fullName>Scalability</fullName>
            </value>
            <value>
                <fullName>Integration Capability</fullName>
            </value>
            <value>
                <fullName>Innovation &amp; Roadmap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>