force-app/main/default/objects/Opportunity/fields/Decision_Process_Stages__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_Stages__c</fullName>
    <description>Multi-select checklist of stages in the client&apos;s decision-making workflow. Stored semi-colon separated.</description>
    <label>Decision Process - Stages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP / RFI</fullName>
            </value>
            <value>
                <fullName>Internal Evaluation</fullName>
            </value>
            <value>
                <fullName>Shortlisting</fullName>
            </value>
            <value>
                <fullName>Procurement Review</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Finance Approval</fullName>
            </value>
            <value>
                <fullName>Board / Executive Sign-off</fullName>
            </value>
            <value>
                <fullName>Final Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>