force-app/main/default/objects/Opportunity/fields/DR_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date__c</fullName>
    <description>Date DR_Status__c was set to Approved. Set by F-11 when Rev Ops approves.</description>
    <inlineHelpText>Date the Deal Review was approved by Rev Ops. Auto-set when DR Status changes to Approved. Do not edit manually.</inlineHelpText>
    <label>Deal Review Approved Date</label>
    <type>Date</type>
</CustomField>