force-app/main/default/objects/Opportunity/fields/DR_Market_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>DR_Market_Benchmark__c</fullName>
    <description>Market pricing and competitor pricing benchmarks used for MRC pricing justification in the Deal Review Memo.</description>
    <label>Market Benchmark</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>