force-app/main/default/objects/Opportunity/fields/DR_Notes__c.field-meta.xml
<CustomField>
    <fullName>DR_Notes__c</fullName>
    <description>Review notes including conditions, exceptions, or rejection reasons.</description>
    <inlineHelpText>Notes from the Deal Review process including conditions, exceptions granted, or reasons for rejection. Completed by Rev Ops during review.</inlineHelpText>
    <label>Deal Review Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>