force-app/main/default/objects/Opportunity/fields/DR_NRC_Justification__c.field-meta.xml
<CustomField>
    <fullName>DR_NRC_Justification__c</fullName>
    <description>Strategic justification for NRC, especially if DE agrees to subsidize.</description>
    <label>NRC Strategic Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>