force-app/main/default/objects/Opportunity/fields/DR_NRC_Scope__c.field-meta.xml
<CustomField>
    <fullName>DR_NRC_Scope__c</fullName>
    <description>Implied scope of works for the NRC component of the deal.</description>
    <label>NRC Scope of Works</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>