force-app/main/default/objects/Opportunity/fields/DR_Other_Considerations__c.field-meta.xml
<CustomField>
    <fullName>DR_Other_Considerations__c</fullName>
    <description>Other key deal considerations or additional information for the Deal Review Memo.</description>
    <label>Other Deal Considerations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>