force-app/main/default/objects/Opportunity/fields/DR_Pricing_Justification__c.field-meta.xml
<CustomField>
    <fullName>DR_Pricing_Justification__c</fullName>
    <description>Strategic justifications for the proposed MRC pricing, especially when below baseline.</description>
    <label>Pricing Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>