force-app/main/default/objects/Opportunity/fields/DR_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Requested_Date__c</fullName>
    <description>Date DR_Status__c was set to &quot;DR Required&quot;. Set by F-11.</description>
    <inlineHelpText>Date a Deal Review was triggered for this opportunity. Set automatically when DR Status changes to DR Required. Do not edit.</inlineHelpText>
    <label>Deal Review Requested Date</label>
    <type>Date</type>
</CustomField>