force-app/main/default/objects/Opportunity/fields/DR_Required__c.field-meta.xml
<CustomField>
    <fullName>DR_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE by F-11 when any trigger condition is met. Reporting field.</description>
    <inlineHelpText>Auto-checked when deal review trigger conditions are met (e.g. discount thresholds, deal size). Reporting flag - see DR Status for the current review outcome.</inlineHelpText>
    <label>Deal Review Required</label>
    <type>Checkbox</type>
</CustomField>