force-app/main/default/objects/Opportunity/fields/DR_Status__c.field-meta.xml
<CustomField>
    <fullName>DR_Status__c</fullName>
    <description>Auto-set to &quot;DR Required&quot; by F-11 when trigger conditions fire.</description>
    <inlineHelpText>Current status of the Deal Review process. Auto-set to DR Required when trigger conditions fire. Rev Ops updates to Approved or Rejected after review.</inlineHelpText>
    <label>Deal Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Sales Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>