force-app/main/default/objects/Opportunity/fields/Facilities_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = Facilities Manager confirmed power and space feasibility. Required before Stage 4.</description>
    <inlineHelpText>Check once the Facilities Manager has confirmed that sufficient power and space are available at the target site. Required before advancing to Stage 4.</inlineHelpText>
    <label>Facilities Confirmed</label>
    <type>Checkbox</type>
</CustomField>