force-app/main/default/objects/Opportunity/fields/Feasibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Status__c</fullName>
    <description>Must = Feasible or Conditional before Stage 3 advance.</description>
    <inlineHelpText>Technical feasibility assessment for this deal. Must be Feasible or Conditional before advancing to Stage 3. Updated by the Facilities or Technical team.</inlineHelpText>
    <label>Feasibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Feasible</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Not Feasible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>