force-app/main/default/objects/Opportunity/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <description>DE pipeline forecast tier. Maps to BOSS CRM Commit/MPQ/Booked categories. Updated by reps during bi-weekly pipeline calls. Drives WCP dashboard reporting.</description>
    <inlineHelpText>Quarterly pipeline category. Set during pipeline review calls. Commit = high-confidence close this quarter. MPQ = best estimate. Booked = Stage 5 confirmed. Dropped = fell out of current quarter.</inlineHelpText>
    <label>Forecast Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>MPQ</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>