force-app/main/default/objects/Opportunity/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <description>Number of free months offered. Triggers Deal Review if &gt; 3.</description>
    <label>Free Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>