force-app/main/default/objects/Opportunity/fields/FX_Billing_Flag__c.field-meta.xml
<CustomField>
    <fullName>FX_Billing_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE when customer contract is in USD but billing country uses local currency.</description>
    <inlineHelpText>Check when the contract is priced in USD but the customer&apos;s billing country invoices in local currency. Triggers FX Rate Model and Terms fields.</inlineHelpText>
    <label>FX Billing Required</label>
    <type>Checkbox</type>
</CustomField>