force-app/main/default/objects/Opportunity/fields/FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate__c</fullName>
    <description>Exchange rate from local currency to USD. Used to compute MRC (USD) and NRC (USD). Enter the rate as: 1 local unit = FX_Rate USD (e.g. 1 HKD = 0.128 USD → enter 0.128).</description>
    <inlineHelpText>Enter the exchange rate to USD. For example, if 1 HKD = 0.128 USD, enter 0.128. Leave blank if deal is priced directly in USD.</inlineHelpText>
    <label>FX Rate (to USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>