force-app/main/default/objects/Opportunity/fields/FX_Rate_Model__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Model__c</fullName>
    <description>Required when FX_Billing_Flag__c = TRUE.</description>
    <inlineHelpText>Required when FX Billing is flagged. Standard Reference Rate uses DE&apos;s published rate; Contract Specific Reference uses a rate negotiated in the SOF.</inlineHelpText>
    <label>FX Rate Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard_Reference_Rate</fullName>
            </value>
            <value>
                <fullName>Contract_Specific_Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>