force-app/main/default/objects/Opportunity/fields/FX_Rate_Terms__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Terms__c</fullName>
    <description>Required when FX_Rate_Model__c = Contract_Specific_Reference.</description>
    <inlineHelpText>Required when FX Rate Model is Contract Specific Reference. Document the agreed rate source, fixing date, and frequency as stated in the SOF.</inlineHelpText>
    <label>FX Rate Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>