force-app/main/default/objects/Opportunity/fields/GoLive_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>GoLive_Target_Date__c</fullName>
    <description>Customer&apos;s required service commencement date. Carries to Quote.RDD__c as default.</description>
    <inlineHelpText>Customer&apos;s required service commencement date. Carried to the Requested Delivery Date on the first quote. Set based on what the customer has communicated.</inlineHelpText>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>