force-app/main/default/objects/Opportunity/fields/Has_Accepted_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Accepted_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when a Quote on this Opportunity reaches Accepted status. Used to hide the New Quote action via Dynamic Actions - once a quote is accepted, no further quotes should be created.</description>
    <inlineHelpText>Indicates a Quote has been accepted on this Opportunity. Set automatically by the Quote acceptance flow.</inlineHelpText>
    <label>Has Accepted Quote</label>
    <type>Checkbox</type>
</CustomField>