force-app/main/default/objects/Opportunity/fields/Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sector__c</fullName>
    <description>Required before Stage 2. More granular than Account.Industry.</description>
    <inlineHelpText>Industry vertical for this deal. Required before advancing to Stage 2. More specific than the account-level Industry field and used for pipeline segmentation.</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Cloud &amp; IT</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Content &amp; Digital Media</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>