force-app/main/default/objects/Opportunity/fields/Is_Multi_Site_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Site_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE when the deal covers more than one site. Parent Opportunity groups sibling Opps. Aligned with UAT feedback OPP-007.</description>
    <inlineHelpText>Check when this opportunity spans multiple data centre sites. Link child site-specific opportunities via the Parent Opportunity lookup. Total Deal MRC rolls up across siblings.</inlineHelpText>
    <label>Multi-Site Deal</label>
    <type>Checkbox</type>
</CustomField>