force-app/main/default/objects/Opportunity/fields/Is_Ramp_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Ramp_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE for multi-phase delivery with staged billing. Parent Opportunity flag.</description>
    <inlineHelpText>Check for deals where the customer takes space or power in multiple phases with staged billing. When set, the Number of Ramp Phases field becomes required.</inlineHelpText>
    <label>Ramp Deal</label>
    <type>Checkbox</type>
</CustomField>